--- a/ConfigurationManager/Tobey.BepInEx.ConfigurationManager.Subnautica.csproj
+++ b/ConfigurationManager/Tobey.BepInEx.ConfigurationManager.Subnautica.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConfigurationManager</RootNamespace>
-    <AssemblyName>Tobey.ConfigurationManager.Subnautica</AssemblyName>
+    <AssemblyName>Tobey.BepInEx.ConfigurationManager.Subnautica</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -34,7 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
-    <DocumentationFile>..\bin\BepInEx\plugins\Tobey.ConfigurationManager.Subnautica.xml</DocumentationFile>
+    <DocumentationFile>..\bin\BepInEx\plugins\Tobey.BepInEx.ConfigurationManager.Subnautica.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
