--- a/ConfigurationManager/packages.config
+++ b/ConfigurationManager/packages.config
@@ -8,5 +8,5 @@
   <package id="MonoMod.RuntimeDetour" version="21.12.13.1" targetFramework="net472" />
   <package id="MonoMod.Utils" version="21.12.13.1" targetFramework="net472" />
   <package id="Unity.InputSystem" version="1.5.0" targetFramework="net35" />
-  <package id="UnityEngine" version="5.6.1" targetFramework="net35" developmentDependency="true" />
+  <package id="UnityEngine.Modules" version="2019.2.17" targetFramework="net472" developmentDependency="true" />
 </packages>
